# libfoolist

./: .gitignore  Makefile.in  config.h.in  configure  configure.ac
lib/: Makefile.am  Makefile.in  foolist.c  foolist.h
lib/tests/: test_libfoolist.c
